# comfyui-archive-output

./: .gitignore  LICENSE  README.md  __init__.py  archive_api.py  archive_files.py  archive_workflow_node.py  compress_api.py  install.py  manifest.json  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
web/: archive_extension.js  archive_output.js
web/extensions/ui/: custom_ui.js
